generate docs with verb

--- a/.verb.md
+++ b/.verb.md
@@ -1,6 +1,6 @@
 ## Usage
 
-This is meant to be fast and opinionated, and only works with [ATX headings](http://spec.commonmark.org/0.24/#atx-headings).
+This is meant to be fast and opinionated, and only works with [ATX headings][atx].
 
 ```js
 var sections = require('{%= name %}');
@@ -8,3 +8,5 @@ var sections = require('{%= name %}');
 
 ## API 
 {%= apidocs('index.js') %}
+
+[atx]: http://spec.commonmark.org/0.24/#atx-headings
