--- a/.verb.md
+++ b/.verb.md
@@ -9,4 +9,13 @@ var sections = require('{%= name %}');
 ## API 
 {%= apidocs('index.js') %}
 
+
+### Example object
+
+The parsed object that is returned looks something like this:
+
+```js
+{%= doc('examples/example.js') %}
+```
+
 [atx]: http://spec.commonmark.org/0.24/#atx-headings
