update docs, deps and examples

--- a/.verb.md
+++ b/.verb.md
@@ -4,6 +4,7 @@ This is meant to be fast and opinionated, and only works with [ATX headings][atx
 
 ```js
 var sections = require('{%= name %}');
+var obj = sections.parse(str);
 ```
 
 ## API 
@@ -15,7 +16,7 @@ var sections = require('{%= name %}');
 The parsed object that is returned looks something like this:
 
 ```js
-{%= doc('examples/example.js') %}
+{%= doc('examples/example.txt') %}
 ```
 
 [atx]: http://spec.commonmark.org/0.24/#atx-headings
